# textile-defects-screening

./: .gitignore  CMakeLists.txt  LICENSE.md  NOTICE  README.md
licenses/: LICENSE-OPENCV.txt  LICENSE.md
src/: creasing_detector.cpp  feed_splicer.cpp  image_capture.cpp
src/GUI/: fabric_gui_launcher.cpp
